--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -58,11 +58,11 @@
             placeholder="email"
           />
         </div>
-        <label class="modal-form-label" for="user_message"></label>
+        <label class="modal-form-label" for="write_user_message"></label>
         <textarea
           class="modal-form-message modal-form-field"
           name="write_user_message"
-          id="user_message"
+          id="write_user_message"
           rows="6"
           placeholder="Comment"
         ></textarea>
