--- a/src/partials/about-product.html
+++ b/src/partials/about-product.html
@@ -17,6 +17,7 @@
                     class="about-product__img img"
                     srcset="./images/about-product/img-1.png 1x 
                             ./images/about-product/img-1@2x.png 2x"
+                    sizes="(min-width: 320px) 279px, 100vw"
                     src="./images/about-product/img-1.png"
                     alt="ice cream"
                     width="132"
@@ -24,6 +25,7 @@
                     loading="lazy"
                 />
             </div>
+
             <ul class="about-product__facts list">
                 <li class="about-product__item">
                     <div class="about-product__container">
