--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -200,11 +200,16 @@ a {
     height: 34px;
     border-radius: 50%;
     fill: #84A178;
-    transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:hover,
+        &:focus {
+            fill: #FCFCFC;
+        }
 }
 
 .git {
-margin: 7px;
+padding: 7px;
     fill: #84A178;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -215,10 +220,10 @@ margin: 7px;
 }
 
 .telegram {
-    margin-top: 9px;
-    margin-right: 9px;
-    margin-bottom: 8px;
-    margin-left: 5.5px;
+    padding-top: 9px;
+    padding-right: 9px;
+    padding-bottom: 8px;
+    padding-left: 5.5px;
     fill: #84A178;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -229,10 +234,10 @@ margin: 7px;
 }
 
 .facebook {
-    margin-top: 7px;
-    margin-bottom: 7px;
-    margin-right: 12px;
-    margin-left: 12px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-right: 12px;
+    padding-left: 12px;
     fill: #84A178;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -275,3 +280,6 @@ margin: 7px;
         }
                                
 }
+// .social-links {
+//     fill: #84A178;
+// }
