--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,23 +5,23 @@
                         class="title_br"> passion</span></p>
             <div class="footer__links">
                 <ul class="footer__social">
-                    <li class="social-link git">
-                        <a target="_blank" href="https://github.com/">
-                            <svg  width="20px" height="20px">
+                    <li class="social-link">
+                        <a target="_blank" href="https://github.com/" class="git-link">
+                            <svg  width="20px" height="20px" class="git">
                                 <use href="./images/svg/symbol-defs.svg#icon-git"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-link telegram">
-                        <a target="_blank" href="https://telegram.org">
-                            <svg width="20.4px" height="15.87px">
+                    <li class="social-link">
+                        <a target="_blank" href="https://telegram.org" class="telegram-link">
+                            <svg width="20.4px" height="15.87px" class="telegram">
                                 <use href="./images/svg/symbol-defs.svg#icon-telegram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-link facebook">
-                        <a target="_blank" href="https://www.facebook.com/">
-                            <svg width="9.35px" height="20.4px">
+                    <li class="social-link">
+                        <a target="_blank" href="https://www.facebook.com/" class="facebook-link">
+                            <svg width="9.35px" height="20.4px" class="facebook">
                                 <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a>
