--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -199,32 +199,41 @@ a {
     width: 34px;
     height: 34px;
     border-radius: 50%;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.git-link {
+fill: #84A178;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: #FCFCFC;
+    }
+}
+.git {
+margin: 7px;
+}
+
+.telegram-link {
     fill: #84A178;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
     &:hover,
         &:focus {
             fill: #FCFCFC;
         }
 }
-
-.git {
-padding: 7px;
-    fill: #84A178;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: #FCFCFC;
-    }
-}
-
 .telegram {
-    padding-top: 9px;
-    padding-right: 9px;
-    padding-bottom: 8px;
-    padding-left: 5.5px;
-    fill: #84A178;
+margin-top: 9px;
+        margin-right: 9px;
+        margin-bottom: 8px;
+        margin-left: 5.5px;
+&:hover,
+    &:focus {
+        fill: #FCFCFC;
+    }
+}
+.facebook-link {
+fill: #84A178;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -232,19 +241,11 @@ padding: 7px;
         fill: #FCFCFC;
     }
 }
-
 .facebook {
-    padding-top: 7px;
-    padding-bottom: 7px;
-    padding-right: 12px;
-    padding-left: 12px;
-    fill: #84A178;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: #FCFCFC;
-    }
+    margin-top: 7px;
+    margin-bottom: 7px;
+    margin-right: 12px;
+    margin-left: 12px;
 }
 
 .br {
@@ -280,6 +281,3 @@ padding: 7px;
         }
                                
 }
-// .social-links {
-//     fill: #84A178;
-// }
