--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1708,16 +1708,30 @@ a {
   width: 34px;
   height: 34px;
   border-radius: 50%;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.git-link {
   fill: #84a178;
-  transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.git-link:hover, .git-link:focus {
+  fill: #fcfcfc;
 }
 
 .git {
   margin: 7px;
-  fill: #84a178;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .git:hover, .git:focus {
+  fill: #fcfcfc;
+}
+
+.telegram-link {
+  fill: #84a178;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.telegram-link:hover, .telegram-link:focus {
   fill: #fcfcfc;
 }
 
@@ -1726,10 +1740,16 @@ a {
   margin-right: 9px;
   margin-bottom: 8px;
   margin-left: 5.5px;
+}
+.telegram:hover, .telegram:focus {
+  fill: #fcfcfc;
+}
+
+.facebook-link {
   fill: #84a178;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.telegram:hover, .telegram:focus {
+.facebook-link:hover, .facebook-link:focus {
   fill: #fcfcfc;
 }
 
@@ -1738,11 +1758,6 @@ a {
   margin-bottom: 7px;
   margin-right: 12px;
   margin-left: 12px;
-  fill: #84a178;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.facebook:hover, .facebook:focus {
-  fill: #fcfcfc;
 }
 
 @media (min-width: 768px) {
@@ -3558,7 +3573,6 @@ a {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   width: 280px;
-  height: 674px;
   padding: 28px;
   background-color: #fcfcfc;
   border: 2px solid #f8d24e;
@@ -3569,7 +3583,6 @@ a {
 @media screen and (min-width: 768px) {
   .modal-franchise {
     width: 568px;
-    max-height: 668px;
     padding-top: 32px;
     padding-right: 60px;
     padding-bottom: 32px;
